# vwpdfutils

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vwpdfutils/: __init__.py  cli.py  context.py  errors.py  page_ranges.py  pdf_io.py
src/vwpdfutils/_internal/: __init__.py  compression.py  imposition.py
src/vwpdfutils/commands/: __init__.py  booklet.py  compress.py  concat.py  convert2pdf.py  rotate.py  split.py
tests/: conftest.py  test_cli_global.py  test_imposition.py  test_integration.py  test_page_ranges.py  test_pdf_io.py
tests/commands/: test_booklet.py  test_compress.py  test_concat.py  test_convert2pdf.py  test_rotate.py  test_split.py
