[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vwpdfutils"
version = "1.0.0"
authors = [
    { name="Vishal W", email="wvishl1606@gmail.com"},
]
description = "CLI for common PDF operations (compress, concat, booklet, split, rotate, convert2pdf)"
readme = "README.md"
requires-python = ">=3.10,<4"
license = { text = "MIT" }
dependencies = [
    "pypdf[full]>=5.0.0,<6",
    "typer>=0.12.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
vwpdfutils = "vwpdfutils.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["vwpdfutils"]
omit = ["*/__init__.py"]

[tool.coverage.report]
fail_under = 80
